-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.5.3
-
3
-
9223372036854775807
When submitting read IOs from lustre clients to oss which uses 6 OSTs, we see in iostat that the number of IO requests in progress on each lun does not go beyond 86.
The result is that throughput per lun is limited to ~600 MB/s.
To be able to get the most out of the pun we need at least 100 requests at once.
This is due to the max number of oss_num_threads being limited by OSS_NTHRS_MAX (512 / 6 = ~86).
Raising the limit to 1024 by patching the code allowed to get enough I/Os at once on each lun and get up to 900MB/s per OST.